--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -15,22 +15,5 @@ settings:
       wc: config-write-py --force
       wq: quit --save
       wqa: quit --save
-  bindings.commands:
-    global:
-      normal:
-        <Ctrl+1>: tab-focus 1
-        <Ctrl+2>: tab-focus 2
-        <Ctrl+3>: tab-focus 3
-        <Ctrl+4>: tab-focus 4
-        <Ctrl+5>: tab-focus 5
-        <Ctrl+6>: tab-focus 6
-        <Ctrl+7>: tab-focus 7
-        <Ctrl+8>: tab-focus 8
-        <Ctrl+9>: tab-focus 9
-        <Ctrl+p>: spawn --userscript qute-pass
-  colors.tabs.pinned.even.fg:
-    global: white
-  colors.tabs.selected.even.bg:
-    global: '#bd93f9'
-  colors.tabs.selected.odd.bg:
-    global: '#bd93f9'
+  content.plugins:
+    global: false
