--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -15,5 +15,7 @@ settings:
       wc: config-write-py --force
       wq: quit --save
       wqa: quit --save
-  content.plugins:
-    global: false
+  colors.tabs.selected.even.bg:
+    global: '#6D7180'
+  colors.tabs.selected.odd.bg:
+    global: '#6D7180'
