--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,46 +6,10 @@
 
 config_version: 2
 settings:
-  aliases:
+  tabs.title.format_pinned:
+    global: '{index}'
+  url.searchengines:
     global:
-      hc: history-clear
-      q: close
-      qa: quit
-      w: session-save
-      wc: config-write-py --force
-      wq: quit --save
-      wqa: quit --save
-  colors.completion.even.bg:
-    global: '#121022'
-  colors.completion.odd.bg:
-    global: '#121022'
-  colors.completion.scrollbar.fg:
-    global: '#121022'
-  colors.prompts.bg:
-    global: '#121022'
-  colors.statusbar.caret.bg:
-    global: '#121022'
-  colors.statusbar.command.bg:
-    global: '#121022'
-  colors.statusbar.command.private.bg:
-    global: '#121022'
-  colors.statusbar.insert.bg:
-    global: '#121022'
-  colors.statusbar.normal.bg:
-    global: '#121022'
-  colors.statusbar.passthrough.bg:
-    global: '#121022'
-  colors.statusbar.private.bg:
-    global: '#121022'
-  colors.tabs.bar.bg:
-    global: '#121022'
-  colors.tabs.even.bg:
-    global: '#121022'
-  colors.tabs.odd.bg:
-    global: '#121022'
-  colors.tabs.selected.even.bg:
-    global: '#4d5169'
-  colors.tabs.selected.odd.bg:
-    global: '#4d5169'
-  colors.webpage.bg:
-    global: '#121022'
+      DEFAULT: https://www.google.com/search?source=hp&ei=ClaVXfakAsfv5gLb-afgDQ&q={}
+      ma: https://www.metal-archives.com/search?searchString={}&type=band_name
+      wiki: https://en.wikipedia.org/w/index.php?cirrusUserTesting=control&search={}&title=Special%3ASearch&go=Go&ns0=1
