--- a/.ncmpcpp/config
+++ b/.ncmpcpp/config
@@ -62,7 +62,7 @@
 ##
 ## If you set format to 44100:16:2, make it 'yes'.
 ##
-#visualizer_in_stereo = yes
+visualizer_in_stereo = yes
 #
 ##
 ## Note: Below parameter defines how often ncmpcpp has to "synchronize"
@@ -71,7 +71,7 @@
 ## that sane values start with >=10.
 ##
 #
-visualizer_sync_interval = 33
+visualizer_sync_interval = 30
 #
 ##
 ## Note: To enable spectrum frequency visualization you need to compile ncmpcpp
