--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,6 +1,6 @@
 db_file            "~/.config/mpd/database"
 log_file           "~/.config/mpd/log"
-music_directory    "~/Music"
+music_directory    "/mnt/4adaf7b6-9c44-42f6-92bb-298b61d06303/Music/"
 playlist_directory "~/.config/mpd/playlists"
 pid_file           "~/.config/mpd/pid"
 state_file         "~/.config/mpd/state"
