--- a/.grsync/grsync.ini
+++ b/.grsync/grsync.ini
@@ -8,7 +8,7 @@ logging_overwrite=false
 fastscroll=true
 switchbutton=false
 trayicon=false
-root_x=0
+root_x=619
 root_y=20
 width=700
 height=553
@@ -16,16 +16,16 @@ last_session=default
 
 [default]
 is_set=false
-text_source=/home/jll/Videos
-text_dest=/run/media/jll/SANDISK1/
+text_source=/home/jll/Music
+text_dest=/run/media/jll/ultrabay/Music
 text_notes=
 text_com_before=
 text_com_after=
 text_addit=
 check_time=false
-check_perm=false
-check_owner=false
-check_group=false
+check_perm=true
+check_owner=true
+check_group=true
 check_onefs=false
 check_verbose=true
 check_progr=true
