--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=dracula
+gtk-theme-name=solar
 gtk-icon-theme-name=dracula
 gtk-font-name=Liberation Sans, 12
 gtk-cursor-theme-name=Vanilla-DMZ
