--- a/.config/qutebrowser/qsettings/QtProject.conf
+++ b/.config/qutebrowser/qsettings/QtProject.conf
@@ -1,6 +1,6 @@
 [FileDialog]
-history=file:///home/jll, file:///home/jll/Pictures
-lastVisited=file:///home/jll/Pictures
+history=file:///home/jll, file:///home/jll/Pictures, file:///home/jll/Downloads
+lastVisited=file:///home/jll/Downloads
 qtVersion=5.13.2
 shortcuts=file:, file:///home/jll, file:///home/jll/Pictures
 sidebarWidth=98
