--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=solar
-gtk-icon-theme-name=dracula
+gtk-theme-name=landing
+gtk-icon-theme-name=landing
 gtk-font-name=Liberation Sans, 12
 gtk-cursor-theme-name=Vanilla-DMZ
 gtk-cursor-theme-size=0
