--- a/.config/qutebrowser/qsettings/QtProject.conf
+++ b/.config/qutebrowser/qsettings/QtProject.conf
@@ -1,8 +1,8 @@
 [FileDialog]
-history=file:///home/jll, file:///home/jll/Pictures, file:///home/jll/Downloads
-lastVisited=file:///home/jll
-qtVersion=5.13.2
-shortcuts=file:, file:///home/jll, file:///home/jll/Pictures
+history=file:///home/jll, file:///home/jll/Pictures, file:///home/jll/Downloads, file:///home/jll/.cache/bum
+lastVisited=file:///home/jll/Downloads
+qtVersion=5.14.0
+shortcuts=file:, file:///home/jll, file:///home/jll/Pictures, file:///home/jll/Downloads
 sidebarWidth=98
 treeViewHeader=@ByteArray(\0\0\0\xff\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1\xec\0\0\0\x4\x1\x1\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x64\xff\xff\xff\xff\0\0\0\x81\0\0\0\0\0\0\0\x4\0\0\0\xff\0\0\0\x1\0\0\0\0\0\0\0?\0\0\0\x1\0\0\0\0\0\0\0@\0\0\0\x1\0\0\0\0\0\0\0n\0\0\0\x1\0\0\0\0\0\0\x3\xe8\0\xff\xff\xff\xff)
 viewMode=List
