--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,7 +1,7 @@
 [Appearance]
-color_scheme_path=/home/jll/.config/qt5ct/colors/oomox-solar.conf
+color_scheme_path=/home/jll/.config/qt5ct/colors/oomox-landing.conf
 custom_palette=true
-icon_theme=dracula
+icon_theme=landing
 standard_dialogs=default
 style=Fusion
 
@@ -25,4 +25,4 @@ underline_shortcut=2
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x3^\0\0\0\x14\0\0\x6?\0\0\x3\x83\0\0\x3\x61\0\0\0\x17\0\0\x6<\0\0\x3\x80\0\0\0\0\0\0\0\0\x6@\0\0\x3\x61\0\0\0\x17\0\0\x6<\0\0\x3\x80)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\0\0\0\0\x15\0\0\x6?\0\0\x3\x83\0\0\0\0\0\0\0\x15\0\0\x6?\0\0\x3\x83\0\0\0\0\0\0\0\0\x6@\0\0\0\0\0\0\0\x15\0\0\x6?\0\0\x3\x83)
